src/shared/components/carousel/projects-item/index.module.css
@import "shared/styles/imports/variables.css";
@import "shared/styles/imports/custom-medias.css";

.container {
  padding: 15px;
  display: flex;

  & .leftContainer {
    max-width: 30%;
    margin-right: 15px;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;

    & .topContainer {
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: flex-start;

      & .logo {
        width: 70%;
        margin-bottom: 15px;

        & img {
          /* Some images don't occupy 100% so they need to be centered, e.g.: internet archive */
          margin: 0 auto;
        }
      }

      & .desc {
        font-size: var(--typography-text-size-small);
        text-align: left;
        line-height: var(--line-height-small);
        letter-spacing: -0.1px;
      }
    }

    & .bottomContainer {
      margin-top: 15px;
    }
  }

  & .rightContainer {
    max-width: 70%;
    flex: 1;

    & img {
      width: 100%;
      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
    }
  }
}

@media (--layout-lte-small) {
  .container {
    flex-direction: column-reverse;
    align-items: center;

    & .leftContainer {
      max-width: 90%;
      margin-right: 0;
      align-items: center;

      & .topContainer {
        align-items: center;

        & .desc {
          margin: 30px 0;
          text-align: center;
        }
      }
    }

    & .rightContainer {
      width: 100%;
      max-width: none;
      margin-bottom: 50px;
    }
  }
}

